# api/docs/swagger.json
@@ -16,6 +16,11 @@
     "paths": {
         "/cameras": {
             "get": {
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -42,6 +47,11 @@
         },
         "/cameras/{hardwareId}": {
             "get": {
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -52,7 +62,7 @@
                     "camera"
                 ],
                 "summary": "Get camera by hardware id",
-                "operationId": "cameraByHardwareId",
+                "operationId": "camera-by-hardware-id",
                 "parameters": [
                     {
                         "type": "string",
@@ -78,6 +88,11 @@
                 }
             },
             "patch": {
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -88,7 +103,7 @@
                     "camera"
                 ],
                 "summary": "update camera by hardware id",
-                "operationId": "updateCameraByHardwareId",
+                "operationId": "update-camera-by-hardware-id",
                 "parameters": [
                     {
                         "type": "string",
@@ -135,7 +150,7 @@
                     "app"
                 ],
                 "summary": "Get Health Check",
-                "operationId": "healthCheck",
+                "operationId": "health-check",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -154,6 +169,11 @@
         },
         "/p2p-access": {
             "get": {
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -164,12 +184,182 @@
                     "app"
                 ],
                 "summary": "Get p2p access info",
-                "operationId": "p2pAccess",
+                "operationId": "p2p-access",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/P2PAccess"
+                        }
+                    }
+                }
+            }
+        },
+        "/token": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "token"
+                ],
+                "summary": "create a token by authenticating a user",
+                "operationId": "token",
+                "parameters": [
+                    {
+                        "description": "user credentials",
+                        "name": "credentials",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/Credentials"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/Token"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/Errors"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/Errors"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/Errors"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/Errors"
+                        }
+                    }
+                }
+            }
+        },
+        "/user": {
+            "get": {
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "current-user"
+                ],
+                "summary": "Get current user",
+                "operationId": "current-user",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/User"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/Errors"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/Errors"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/Errors"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/Errors"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/reset-password": {
+            "patch": {
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "current-user"
+                ],
+                "summary": "Resets a user's password",
+                "operationId": "reset-password",
+                "parameters": [
+                    {
+                        "description": "reset user's password",
+                        "name": "resetPassword",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/ResetPassword"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/Errors"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/Errors"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/Errors"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/Errors"
                         }
                     }
                 }
@@ -246,6 +436,21 @@
                 }
             }
         },
+        "Credentials": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "ErrorMessage": {
             "type": "object",
             "required": [
@@ -314,8 +519,75 @@
                 }
             }
         },
+        "ResetPassword": {
+            "type": "object",
+            "required": [
+                "password",
+                "passwordConfirmation"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "passwordConfirmation": {
+                    "type": "string"
+                }
+            }
+        },
+        "Token": {
+            "type": "object",
+            "required": [
+                "accessToken",
+                "expiresIn",
+                "issuedTokenType",
+                "refreshToken",
+                "refreshTokenExpiresIn",
+                "tokenType"
+            ],
+            "properties": {
+                "accessToken": {
+                    "type": "string"
+                },
+                "expiresIn": {
+                    "type": "integer"
+                },
+                "issuedTokenType": {
+                    "type": "string"
+                },
+                "refreshToken": {
+                    "type": "string"
+                },
+                "refreshTokenExpiresIn": {
+                    "type": "integer"
+                },
+                "tokenType": {
+                    "type": "string"
+                }
+            }
+        },
         "UpsertCamera": {
             "type": "object"
+        },
+        "User": {
+            "type": "object",
+            "required": [
+                "createdAt",
+                "updatedAt",
+                "username"
+            ],
+            "properties": {
+                "createdAt": {
+                    "type": "string",
+                    "format": "date-time"
+                },
+                "updatedAt": {
+                    "type": "string",
+                    "format": "date-time"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
         },
         "Version": {
             "type": "object",
@@ -340,9 +612,14 @@
             "name": "Authorization",
             "in": "header"
         },
-        "TenentId": {
+        "Locale": {
             "type": "apiKey",
-            "name": "Tenent-Id",
+            "name": "X-Locale",
+            "in": "header"
+        },
+        "Timezone": {
+            "type": "apiKey",
+            "name": "X-Timezone",
             "in": "header"
         }
     }
